<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="graph_note">Note: All angles are in radians</string>
    <string name="font_size">Font Size</string>
    <string name="ans">ANS</string>
    <string name="mode_switch">Mode Switch - Swipe Only</string>
    <string name="history">Calculation History</string>
    <string name="mode_key">Mode</string>
    <string name="empty"> </string>
    <string name="tokens_key">Tokens</string>
    <string name="about_us">About Us</string>
    <string name="visit">Visit our website</string>
    <string name="our_team">Our Team</string>
    <string name="about_content">Calculall is a mobile application developed by TruTech Innovations, a startup
    started by students in the Waterloo area to create tools for other students.</string>
    <string name="credits">CEO and Software Architect - Alston Lin\nCFO and Designer - David Liu\nSenior Developer - Ejaaz Merali\n
    Junior Developer - Jason Fok\nJunior Developer - Keith Wong\nQuality Assurance Analyst - Tyler Wang</string>
    <string name="special_thanks">Other collaborators\n Ernest Wong, Brenden Chiu, Ahsen Husain, David Lin</string>
    <string name="preference_key">com.trutechinnovations.calculall.PREFERENCES</string>
    <string name="upgrade">Donate</string>
    <string name="report">Report a Bug</string>
    <string name="haptic">Vibrate</string>
    <string name="decimals">Digits</string>
    <string name="round_to">Round to</string>
    <string name="theme">Change Themes</string>
    <string name="about">About</string>
    <string name="select_bounds">Select the Bounds</string>
    <string name="x_min">X min</string>
    <string name="y_min">Y min</string>
    <string name="x_max">X max</string>
    <string name="y_max">Y max</string>
    <string name="cancel">Cancel</string>
    <string name="arcsin"><![CDATA[sin<sup><small>-1</small></sup>]]></string>
    <string name="arcsinh"><![CDATA[sinh<sup><small>-1</small></sup>]]></string>
    <string name="arccos"><![CDATA[cos<sup><small>-1</small></sup>]]></string>
    <string name="arccosh"><![CDATA[cosh<sup><small>-1</small></sup>]]></string>
    <string name="arctan"><![CDATA[tan<sup><small>-1</small></sup>]]></string>
    <string name="arctanh"><![CDATA[tanh<sup><small>-1</small></sup>]]></string>
    <string name="done">DONE</string>
    <string name="num">#</string>
    <string name="edit">Edit</string>
    <string name="newe"><![CDATA[[ ]<sup><small>+</small></sup>]]></string>
    <string name="rank">rank</string>
    <string name="ref">REF</string>
    <string name="rref">RREF</string>
    <string name="det">det</string>
    <string name="diag">DIAG</string>
    <string name="decomp">DECOMP</string>
    <string name="tr">tr</string>
    <string name="lambda">λ</string>
    <string name="ev">Ev</string>
    <string name="augment">[A|B]</string>
    <string name="transpose"><![CDATA[A<sup><small><i>t</i></small></sup>]]></string>
    <string name="matrix_pow"><![CDATA[A<sup><small><i>y</i></small></sup>]]></string>
    <string name="inverse_a"><![CDATA[A<sup><small><i>-1</i></small></sup>]]></string>
    <string name="expand">Expand</string>
    <string name="app_name">Calculall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="title_activity_graphing">Graphing</string>
    <string name="AC">AC</string>
    <string name="C">CLR</string>
    <string name="plusminus">±</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="factor">Factor</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="graphing">Graphing</string>
    <string name="more">More</string>
    <string name="open_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="open_square_bracket">[</string>
    <string name="closed_square_bracket">]</string>
    <string name="magnitude_open">‖(</string>
    <string name="magnitude_close">)‖</string>
    <string name="unit_vector">Û</string>
    <string name="argument">Arg</string>
    <string name="bear">Bea</string>
    <string name="trueB">Tru</string>
    <string name="projection">proj</string>
    <string name="scalar">Scalar</string>
    <string name="angle_between_vectors">∠</string>
    <string name="vect_u">U</string>
    <string name="vect_v">V</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="dot">•</string>
    <string name="cross">×</string>
    <string name="comma">,</string>
    <string name="power_ten">Exp</string>
    <string name="hyp">hyp</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">"π"</string>
    <string name="e">e</string>
    <string name="shift">2nd</string>
    <string name="backspace">⇤</string>
    <string name="rightArrow">→</string>
    <string name="sqrt">√</string>
    <string name="cbrt">³√</string>
    <string name="degrees">Degrees</string>
    <string name="radians">Radians</string>
    <string name="gradians">Gradians</string>
    <string name="exponent"><![CDATA[x<sup><small><i>□</i></small></sup>]]></string>
    <string name="var_root"><![CDATA[<sup><small><i>□</i></small></sup>√x]]></string>
    <string name="recip"><![CDATA[x<sup><small>-1</small></sup>]]></string>
    <string name="square">x²</string>
    <string name="cube">x³</string>
    <string name="pow_of_ten"><![CDATA[10<sup><small><i>□</i></small></sup>]]></string>
    <string name="pow_of_e"><![CDATA[e<sup><small><i>□</i></small></sup>]]></string>
    <string name="log10">log</string>
    <string name="log_b">log_b</string>
    <string name="ln">ln</string>
    <string name="store">STO</string>
    <string name="varA">A</string>
    <string name="varB">B</string>
    <string name="varC">C</string>
    <string name="varX">X</string>
    <string name="varY">Y</string>
    <string name="varZ">Z</string>
    <string name="base16">HEX</string>
    <string name="base10">DEC</string>
    <string name="base8">OCT</string>
    <string name="matrix">Matrix</string>
    <string name="base2">BIN</string>
    <string name="radix">CHANGE</string>
    <string name="imp_frac">d/e</string>
    <string name="factorial">x!</string>
    <string name="combination">n<b><b>C</b></b>r</string>
    <string name="permutation">n<b><b>P</b></b>r</string>
    <string name="title_activity_vector">Vector</string>
    <string name="function">Function</string>
    <string name="vector">Vector</string>
    <string name="findRoots">Roots</string>
    <string name="derivative">d/dx</string>
    <string name="graph">Graph</string>
    <string name="integrate">∫</string>
    <string name="simplify">Simplify</string>
    <string name="title_activity_matrix_mode">MatrixMode</string>
    <string name="hello_world">Hello world!</string>
    <string name="leftscroll">⇦</string>
    <string name="rightscroll">⇨</string>
    <string name="title_activity_ocrmode">OCRMode</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="constant">CNST</string>
    <string name="listOfConstants">List of Constants</string>
    <string name="reduction">Row Reduction Steps</string>
    <string name="decomposition">Matrix Decompositions</string>
    <string name="eigen">eigen</string>
    <string name="vector_arrow">vector_arrow</string>
    <string name="autocalculate">Automatically Calculate</string>

</resources>
