<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff093E53"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negative_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/plusminus"
            android:textSize="36sp" />

        <Button
            android:id="@+id/sqrt_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/sqrt"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/backspace"
            android:onClick="onClick"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/eight_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/nine_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:onClick="onClick"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/five_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/six_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:onClick="onClick"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/two_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/three_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:onClick="onClick"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero_button"
            style="@style/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/decimal_button"
            style="@style/button4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:onClick="onClick"
            android:textSize="36sp" />

        <Button
            android:id="@+id/done_num_button"
            style="@style/button4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/done"
            android:onClick="onClick"
            android:textSize="36sp" />

    </LinearLayout>
</LinearLayout>